--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/time-cash_white.png
+    - assets/time-cash_white.jpg
     - assets/avat2.webp
     - assets/avat5.png
     - assets/messi.jpg
